--- a/src/config/log4j.properties
+++ b/src/config/log4j.properties
@@ -13,3 +13,5 @@ log4j.appender.R.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%t] [%c] 
 
 
 log4j.logger.org.hibernate.tool.hbm2ddl=debug
+
+# info
