--- a/src/config/log4j.properties
+++ b/src/config/log4j.properties
@@ -14,4 +14,4 @@ log4j.appender.R.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%t] [%c] 
 
 log4j.logger.org.hibernate.tool.hbm2ddl=debug
 
-# info
+# info debugger
