--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,26 @@
 		    <artifactId>spring-context-support</artifactId>
 		    <version>4.1.6.RELEASE</version>
 		</dependency>
-		
+
+		<!--	aop aspect	-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.9</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -341,6 +360,14 @@
 			<artifactId>jbpm-test</artifactId>
 			<version>6.5.0.Final</version>
 		</dependency>
+
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.10.1</version>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
