--- a/pom.xml
+++ b/pom.xml
@@ -284,16 +284,9 @@
 		    <scope>provided</scope>
 		</dependency>
  		-->
-		<!-- Provided Websocket API, because tomcat has its own implementation -->
-		<dependency>
-		    <groupId>javax.websocket</groupId>
-		    <artifactId>javax.websocket-api</artifactId>
-		    <version>1.1</version>
-		    <scope>provided</scope>
-		</dependency>
-				
+
 		<!-- jbpm支持	 -->
-		<!-- 
+		<!--
 		<dependency>
 		    <groupId>org.jbpm</groupId>
 		    <artifactId>jbpm-bpmn2</artifactId>
@@ -366,6 +359,13 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.10.1</version>
+		</dependency>
+
+		<!--	thumbnail	-->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
 		</dependency>
 
 	</dependencies>
